shmsrc: Do not call gst_poll_remove_fd upon stop if reading was never started

https://bugzilla.gnome.org/show_bug.cgi?id=768365